Mejorando notas de design y creando header y footer webs.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/css/main.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/css/global.css" />
+    <link rel="stylesheet" href="styles/css/home.css" />
+    <title>Daniel Vega Egea - Página Personal | Home</title>
   </head>
-  <body></body>
+  <body>
+    <div class="sidebar">
+      <header>
+        <div class="logo">
+          <div><a href="./index.html">Daniel Vega Egea</a></div>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./about-me.html">Aboug Me</a></li>
+            <li><a href="./about-web.html">About Web</a></li>
+          </ul>
+        </nav>
+      </header>
+      <footer>
+        <div>
+          <p>2022 Daniel Vega Egea</p>
+        </div>
+      </footer>
+    </div>
+    <main>
+      <h1>Test</h1>
+    </main>
+  </body>
 </html>
