--- a/index.html
+++ b/index.html
@@ -4,33 +4,89 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/css/global.css" />
+    <link rel="stylesheet" href="styles/css/common.css" />
     <link rel="stylesheet" href="styles/css/home.css" />
     <title>Daniel Vega Egea - Página Personal | Home</title>
   </head>
   <body>
-    <div class="sidebar">
-      <header>
-        <div class="logo">
-          <div><a href="./index.html">Daniel Vega Egea</a></div>
+    <div class="bodyContainer">
+      <div class="sidebarContainer">
+        <div class="sidebar">
+          <header>
+            <div class="logo shadow1">
+              <a class="logoLink" href="./index.html">Daniel Vega Egea</a>
+            </div>
+            <nav>
+              <ul>
+                <li>
+                  <button class="navButton homeBTN">Home</button>
+                </li>
+                <li>
+                  <button class="navButton blogBTN">Blog</button>
+                </li>
+                <li>
+                  <button class="navButton aboutMeBTN">About Me</button>
+                </li>
+                <li>
+                  <button class="navButton aboutWebBTN">About Web</button>
+                </li>
+              </ul>
+            </nav>
+          </header>
+          <footer>
+            <div class="shadow1">
+              <p>2022 Daniel Vega Egea</p>
+            </div>
+          </footer>
         </div>
-        <nav>
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./blog.html">Blog</a></li>
-            <li><a href="./about-me.html">Aboug Me</a></li>
-            <li><a href="./about-web.html">About Web</a></li>
-          </ul>
-        </nav>
-      </header>
-      <footer>
+      </div>
+      <main>
         <div>
-          <p>2022 Daniel Vega Egea</p>
+          <h1>Main Page tittle</h1>
         </div>
-      </footer>
+        <div>
+          <h2>Test</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
+            praesentium, provident rerum aspernatur, atque iure inventore dolor
+            commodi illum assumenda eveniet? Asperiores delectus quisquam
+            aliquid eaque voluptates modi? Nesciunt, ducimus!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
+            praesentium, provident rerum aspernatur, atque iure inventore dolor
+            commodi illum assumenda eveniet? Asperiores delectus quisquam
+            aliquid eaque voluptates modi? Nesciunt, ducimus!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
+            praesentium, provident rerum aspernatur, atque iure inventore dolor
+            commodi illum assumenda eveniet? Asperiores delectus quisquam
+            aliquid eaque voluptates modi? Nesciunt, ducimus!
+          </p>
+        </div>
+        <div>
+          <h2>Test</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
+            praesentium, provident rerum aspernatur, atque iure inventore dolor
+            commodi illum assumenda eveniet? Asperiores delectus quisquam
+            aliquid eaque voluptates modi? Nesciunt, ducimus!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
+            praesentium, provident rerum aspernatur, atque iure inventore dolor
+            commodi illum assumenda eveniet? Asperiores delectus quisquam
+            aliquid eaque voluptates modi? Nesciunt, ducimus!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
+            praesentium, provident rerum aspernatur, atque iure inventore dolor
+            commodi illum assumenda eveniet? Asperiores delectus quisquam
+            aliquid eaque voluptates modi? Nesciunt, ducimus!
+          </p>
+        </div>
+      </main>
     </div>
-    <main>
-      <h1>Test</h1>
-    </main>
   </body>
 </html>
