fixing file names and improving responsivity V2.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <title>Daniel Vega Egea - Página Personal | Home</title>
   </head>
   <body>
-    <div class="bodyContainer">
+    <div class="bodyContainer mediaQueryMb">
       <div class="sidebarContainer">
         <div class="sidebar">
-          <header>
+          <header class="mediaQuery">
             <div class="logo shadow1">
-              <a class="logoLink" href="./index.html">Daniel Vega Egea</a>
+              <!-- <a class="logoLink" href="./index.html">Daniel Vega Egea</a> -->
+              <a class="logoLink" href="./index.html">DVE</a>
             </div>
+            <button class="btn-menu">☰</button>
             <nav>
               <ul>
                 <li>
@@ -33,7 +35,7 @@
               </ul>
             </nav>
           </header>
-          <footer>
+          <footer class="mediaQuery">
             <div class="shadow1">
               <p>2022 Daniel Vega Egea</p>
             </div>
