--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           </header>
           <footer class="mediaQuery">
             <div class="shadow1">
+              <button class="btn-font">🗚</button>
               <p>2022 Daniel Vega Egea</p>
             </div>
           </footer>
