--- a/index.html
+++ b/index.html
@@ -62,16 +62,18 @@
         </div>
       </div>
       <main>
+        <h1>H1 Daniel Vega Egea Portfolio</h1>
+        <!-- <div>
+          
+        </div> -->
         <div>
-          <h1>Main Page tittle</h1>
-        </div>
-        <div>
-          <h2>Test</h2>
+          <h2>H2 Text</h2>
+          <h3>H3 Text</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
-            praesentium, provident rerum aspernatur, atque iure inventore dolor
-            commodi illum assumenda eveniet? Asperiores delectus quisquam
-            aliquid eaque voluptates modi? Nesciunt, ducimus!
+            Paragraph - Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Ratione praesentium, provident rerum aspernatur, atque iure
+            inventore dolor commodi illum assumenda eveniet? Asperiores delectus
+            quisquam aliquid eaque voluptates modi? Nesciunt, ducimus!
           </p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
