Improving home/main section.

--- a/index.html
+++ b/index.html
@@ -62,19 +62,30 @@
         </div>
       </div>
       <main>
-        <h1>H1 Daniel Vega Egea Portfolio</h1>
-        <!-- <div>
-          
-        </div> -->
-        <div>
-          <h2>H2 Text</h2>
-          <h3>H3 Text</h3>
-          <p>
-            Paragraph - Lorem ipsum dolor sit amet, consectetur adipisicing
-            elit. Ratione praesentium, provident rerum aspernatur, atque iure
-            inventore dolor commodi illum assumenda eveniet? Asperiores delectus
-            quisquam aliquid eaque voluptates modi? Nesciunt, ducimus!
-          </p>
+        <div class="title">
+          <div class="mainTitle"><h1>Daniel Vega Egea Portfolio</h1></div>
+        </div>
+
+        <div class="card image-container">
+          <img class="image" src="./images/IMG_1512.JPG" alt="" />
+        </div>
+        <div class="card presentation">
+          <h2>Proceso de creación de Metal Gear</h2>
+          <!-- <h3>H3 Text</h3> -->
+          <div>
+            <div class="image-container">
+              <img class="image" src="./images/1617105337508.jpg" alt="" />
+            </div>
+            <div>
+              <p class="dropCaps">
+                Paragraph - Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit. Ratione praesentium, provident rerum aspernatur, atque
+                iure inventore dolor commodi illum assumenda eveniet? Asperiores
+                delectus quisquam aliquid eaque voluptates modi? Nesciunt,
+                ducimus!
+              </p>
+            </div>
+          </div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
             praesentium, provident rerum aspernatur, atque iure inventore dolor
@@ -88,9 +99,9 @@
             aliquid eaque voluptates modi? Nesciunt, ducimus!
           </p>
         </div>
-        <div>
+        <div class="card">
           <h2>Test</h2>
-          <p>
+          <p class="dropCaps">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
             praesentium, provident rerum aspernatur, atque iure inventore dolor
             commodi illum assumenda eveniet? Asperiores delectus quisquam
