Adding image zooming.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/ico"
+      sizes="32x32"
+      href="./images/icon/infinity.ico"
+    />
     <link rel="stylesheet" href="styles/css/common.css" />
     <link rel="stylesheet" href="styles/css/home.css" />
     <title>Daniel Vega Egea - Página Personal | Home</title>
@@ -62,19 +68,41 @@
         </div>
       </div>
       <main>
+        <!-- MODAL -->
+        <div class="modal-container modal-close">
+          <div class="modal">
+            <div class="image-container modal-image-container"></div>
+            <!-- <img
+                class="image modal-image"
+                src="./images/IMG_1512.JPG"
+                alt="The Málaga beach."
+              /> -->
+            <!-- <p>We're Not Ready For Sign-Ups...Yet.</p> -->
+            <button class="close-btn" name="close">X</button>
+          </div>
+        </div>
+        <!-- /MODAL -->
         <div class="title">
           <div class="mainTitle"><h1>Daniel Vega Egea Portfolio</h1></div>
         </div>
 
-        <div class="card image-container">
-          <img class="image" src="./images/IMG_1512.JPG" alt="" />
+        <div class="card image-container zoom">
+          <img
+            class="image"
+            src="./images/IMG_1512.JPG"
+            alt="The Málaga beach."
+          />
         </div>
         <div class="card presentation">
           <h2>Proceso de creación de Metal Gear</h2>
           <!-- <h3>H3 Text</h3> -->
           <div>
-            <div class="image-container">
-              <img class="image" src="./images/1617105337508.jpg" alt="" />
+            <div class="image-container zoom">
+              <img
+                class="image"
+                src="./images/1617105337508.jpg"
+                alt="Portrait of Daniel Vega."
+              />
             </div>
             <div>
               <p class="dropCaps">
