--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,36 +15,32 @@
     <title>Daniel Vega Egea - Página Personal | Home</title>
   </head>
   <body>
-    <div class="bodyContainer">
-      <div class="sidebarContainer">
+    <div class="body-container">
+      <div class="sidebar-container">
         <div class="sidebar">
           <header>
             <button class="btn-menu">☰</button>
             <div class="logo shadow1">
-              <!-- <a class="logoLink" href="./index.html">Daniel Vega Egea</a> -->
-              <a class="logoLink" href="./index.html">DVE</a>
+              <a class="logo-link" href="./index.html">DVE</a>
             </div>
             <nav>
               <ul>
                 <li>
                   <button
-                    class="navButton homeBTN"
+                    class="nav-btn"
                     onclick="window.location='index.html'"
                   >
                     Home
                   </button>
                 </li>
                 <li>
-                  <button
-                    class="navButton blogBTN"
-                    onclick="window.location='blog.html'"
-                  >
+                  <button class="nav-btn" onclick="window.location='blog.html'">
                     Blog
                   </button>
                 </li>
                 <li>
                   <button
-                    class="navButton aboutMeBTN"
+                    class="nav-btn"
                     onclick="window.location='aboutme.html'"
                   >
                     About Me
@@ -52,7 +48,7 @@
                 </li>
                 <li>
                   <button
-                    class="navButton aboutWebBTN"
+                    class="nav-btn"
                     onclick="window.location='aboutweb.html'"
                   >
                     About Web
