Changed filenames for clarity.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
       sizes="32x32"
       href="./images/icon/infinity.ico"
     />
-    <link rel="stylesheet" href="styles/css/common.css" />
-    <link rel="stylesheet" href="styles/css/home.css" />
+    <link rel="stylesheet" href="styles/css/shared-sidebar.css" />
+    <link rel="stylesheet" href="styles/css/shared-main.css" />
+    <!-- Disabled for no use by now.
+    <link rel="stylesheet" href="styles/css/home.css" /> -->
     <title>Daniel Vega Egea - Página Personal | Home</title>
   </head>
   <body>
@@ -57,7 +59,7 @@
               </ul>
             </nav>
           </header>
-          <footer class="shadow1">
+          <footer class="footer-shadow">
             <button class="btn-font">🗚</button>
             <p>2022 Daniel Vega Egea</p>
           </footer>
@@ -75,7 +77,9 @@
         </div>
         <!-- /MODAL -->
         <div class="title">
-          <div class="mainTitle"><h1>Daniel Vega Egea Portfolio</h1></div>
+          <div class="main-title home-title">
+            <h1>Daniel Vega Egea Portfolio</h1>
+          </div>
         </div>
 
         <div class="image-card">
@@ -99,7 +103,7 @@
             />
             <p class="hidden-caption">Daniel Vega, para servirles.</p>
           </div>
-          <p class="dropCaps">
+          <p class="drop-caps">
             Saludos. Mi nombre es Daniel Vega y ante ti se encuentra un proyecto
             de <em>portfolio</em> con el ánimo de hacer las veces de
             <strong>Curriculum Vitae</strong> adaptado a las tecnologías
@@ -125,6 +129,6 @@
         </article>
       </main>
     </div>
-    <script src="./scripts/common.js"></script>
+    <script src="./scripts/shared.js"></script>
   </body>
 </html>
