Creating all four webs. Home and About Web are ready.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="sidebar-container">
         <div class="sidebar">
           <header>
-            <button class="btn-menu">☰</button>
+            <button type="button" class="btn-menu">☰</button>
             <div class="logo shadow1">
               <a class="logo-link" href="./index.html">DVE</a>
             </div>
@@ -29,53 +29,58 @@
               <ul>
                 <li>
                   <button
+                    type="button"
                     class="nav-btn"
                     onclick="window.location='index.html'"
                   >
-                    Home
+                    Inicio
                   </button>
                 </li>
                 <li>
-                  <button class="nav-btn" onclick="window.location='blog.html'">
+                  <button
+                    type="button"
+                    class="nav-btn"
+                    onclick="window.location='blog.html'"
+                  >
                     Blog
                   </button>
                 </li>
                 <li>
                   <button
+                    type="button"
                     class="nav-btn"
                     onclick="window.location='aboutme.html'"
                   >
-                    About Me
+                    Sobre Mi
                   </button>
                 </li>
                 <li>
                   <button
+                    type="button"
                     class="nav-btn"
                     onclick="window.location='aboutweb.html'"
                   >
-                    About Web
+                    Sobre Web
                   </button>
                 </li>
               </ul>
             </nav>
           </header>
           <footer class="footer-shadow">
-            <button class="btn-font">🗚</button>
+            <button type="button" class="btn-font">🗚</button>
             <p>2022 Daniel Vega Egea</p>
           </footer>
         </div>
       </div>
       <main>
-        <!-- MODAL -->
         <div class="modal-container modal-close">
           <div class="modal">
             <div>
               <div class="image-container modal-image-container"></div>
             </div>
-            <button class="close-btn" name="close">X</button>
+            <button type="button" class="close-btn" name="close">X</button>
           </div>
         </div>
-        <!-- /MODAL -->
         <div class="title">
           <div class="main-title home-title">
             <h1>Daniel Vega Egea Portfolio</h1>
@@ -86,7 +91,7 @@
           <div class="image-container zoom">
             <img
               class="image"
-              src="./images/IMG_1512.JPG"
+              src="./images/home/IMG_1512.JPG"
               alt="Foto de la Playa de Málaga."
             />
             <p class="hidden-caption">La Playa de Málaga.</p>
@@ -98,7 +103,7 @@
           <div class="image-container portrait float left zoom">
             <img
               class="image"
-              src="./images/1617105337508.jpg"
+              src="./images/home/1617105337508.jpg"
               alt="Retrato de Daniel Vega."
             />
             <p class="hidden-caption">Daniel Vega, para servirles.</p>
