Optional Dark Theme Added.

--- a/aboutme.html
+++ b/aboutme.html
@@ -66,7 +66,10 @@
             </nav>
           </header>
           <footer class="footer-shadow">
-            <button type="button" class="btn-font">🗚</button>
+            <div class="custom-button-container">
+              <button type="button" class="cstm-btn btn-font">🗚</button>
+              <button type="button" class="cstm-btn btn-thm">🌗</button>
+            </div>
             <p>2022 Daniel Vega Egea</p>
           </footer>
         </div>
