--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/css/shared-sidebar.css" />
     <link rel="stylesheet" href="styles/css/shared-main.css" />
     <!-- Disabled for no use by now.
-    <link rel="stylesheet" href="styles/css/home.css" /> -->
+    <link rel="stylesheet" href="styles/css/blog.css" /> -->
     <title>Daniel Vega Egea - Página Personal | Home</title>
   </head>
   <body>
@@ -67,7 +67,10 @@
             </nav>
           </header>
           <footer class="footer-shadow">
-            <button type="button" class="btn-font">🗚</button>
+            <div class="custom-button-container">
+              <button type="button" class="cstm-btn btn-font">🗚</button>
+              <button type="button" class="cstm-btn btn-thm">🌗</button>
+            </div>
             <p>2022 Daniel Vega Egea</p>
           </footer>
         </div>
