Fixed more evil bugs.

--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
         <div class="modal-container modal-close">
           <div class="modal">
             <div>
-              <div class="image-container modal-image-container"></div>
+              <picture class="image-container modal-image-container"></picture>
             </div>
             <button type="button" class="close-btn" name="close">X</button>
           </div>
@@ -131,14 +131,14 @@
             cavilar un poco sobre el mecenazgo y el arte, dado que la simbiosis
             que se genera entre ellos suele estar llena de desencuentros.
           </p>
-          <div class="image-container landscape float left zoom">
+          <picture class="image-container landscape float left zoom">
             <img
               class="image"
               src="./images/blog/Cliff-Pintor.jpg"
               alt="Viñeta satírica de Cliff B. como pintor."
             />
             <p class="hidden-caption">La faceta artística de Cliff B.</p>
-          </div>
+          </picture>
           <p>
             Hay quien ha criticado la película “<strong>Titanic</strong>”
             (<em>1997</em>) por centrar el guion en ese
@@ -170,14 +170,14 @@
             los <em>plataformas</em>, ahora son los <em>FPS</em> y los
             <em>sandbox</em>.
           </p>
-          <div class="image-container landscape float right zoom">
+          <picture class="image-container landscape float right zoom">
             <img
               class="image"
               src="./images/blog/Jack-and-Rose.jpg"
               alt="Escena de la película Titanic, con Jack y Rose."
             />
             <p class="hidden-caption">La importancia económica del amor.</p>
-          </div>
+          </picture>
           <p>
             Nunca debemos olvidar que cada juego es en sí mismo un
             <em>proyecto</em> que se inicia, tras hacer un
@@ -202,7 +202,7 @@
             mucho antes de lo deseado para cuadrarlo en fiestas de altas ventas.
           </p>
           <div class="compare">
-            <div class="image-container zoom">
+            <picture class="image-container zoom">
               <img
                 class="image"
                 src="./images/blog/Laura Cruz.png"
@@ -211,8 +211,8 @@
               <p class="hidden-caption">
                 La buena de Lara Croft, cuando era Laura Cruz
               </p>
-            </div>
-            <div class="image-container zoom">
+            </picture>
+            <picture class="image-container zoom">
               <img
                 class="image"
                 src="./images/blog/Lara Croft.jpg"
@@ -221,7 +221,7 @@
               <p class="hidden-caption">
                 Lara Croft tal como salió. ¿Busquen las diferencias?.
               </p>
-            </div>
+            </picture>
           </div>
           <p>
             Esto también explica como es que los héroes siempre son musculosos y
@@ -247,14 +247,14 @@
             deben rendir cuentas a los productores y, por tanto, no son dueños
             absolutos del proyecto que dirigen.
           </p>
-          <div class="image-container portrait float left zoom">
+          <picture class="image-container portrait float left zoom">
             <img
               class="image"
               src="./images/blog/Final Fantasy Spirits Within.jpg"
               alt="Portada de Final Fantasy - La fuerza interior."
             />
             <p class="hidden-caption">La ironía de Final Fantasy.</p>
-          </div>
+          </picture>
           <p>
             ¿Y que pasaría si no fuera así? Pues ahí tenemos a nuestro amigo
             <strong>George Lucas</strong> para demostrarnos lo que ocurre si
@@ -298,14 +298,14 @@
             de identidad, que nacen de la falta de recursos con las que lidiaban
             los programadores a la hora de crear sus juegos.
           </p>
-          <div class="image-container landscape float right zoom">
+          <picture class="image-container landscape float right zoom">
             <img
               class="image"
               src="./images/blog/roxy_p10.png"
               alt="Imagen de comparación de Palette Swap de Final Fight."
             />
             <p class="hidden-caption">Comparación de Palette Swap.</p>
-          </div>
+          </picture>
           <p>
             Vamos a comenzar hablando de los trajes alternativos en los
             <strong>Street Fifghter</strong>, <strong>Final Fight</strong> y
@@ -328,7 +328,7 @@
             que tendríamos un pelo amarillo (rubio) y un bigote de similar
             color.
           </p>
-          <div class="image-container portrait float left zoom">
+          <picture class="image-container portrait float left zoom">
             <img
               class="image"
               src="./images/blog/zangief.jpg"
@@ -337,7 +337,7 @@
             <p class="hidden-caption">
               Es lo malo de tener la boca del color de tus calzones.
             </p>
-          </div>
+          </picture>
           <p>
             Esto mismo se ha usado los juegos para simular varios tipos de
             personajes o de trajes. Cambias el <em>blanco</em> de
@@ -384,22 +384,22 @@
             con una linterna.
           </p>
           <div class="compare">
-            <div class="image-container zoom">
+            <picture class="image-container zoom">
               <img
                 class="image"
                 src="./images/blog/Silent Hill 3 Fog.jpg"
                 alt="Captura de Silent Hill 3."
               />
               <p class="hidden-caption">Silent Hill 3 con niebla.</p>
-            </div>
-            <div class="image-container zoom">
+            </picture>
+            <picture class="image-container zoom">
               <img
                 class="image"
                 src="./images/blog/Silent Hill 3 No Fog.jpg"
                 alt="Captura de Silent Hill 3, trucada sin niebla."
               />
               <p class="hidden-caption">Silent Hill 3 sin niebla.</p>
-            </div>
+            </picture>
           </div>
           <p>
             El <em>chip de sonido</em> que tiene la
@@ -432,7 +432,7 @@
             un ordenador que en aquella época era puntero como fue el
             <strong>MSX</strong>.
           </p>
-          <div class="image-container landscape float right zoom">
+          <picture class="image-container landscape float right zoom">
             <img
               class="image"
               src="./images/blog/metal-gear.jpg"
@@ -441,7 +441,7 @@
             <p class="hidden-caption">
               Somos pocos en pantalla, pero lo pasamos bien.
             </p>
-          </div>
+          </picture>
           <p>
             Si os paráis a analizar todo esto, veremos todo el paralelismo que
             existe entre el sector del ocio electrónico y el del cine. En ambos
@@ -472,7 +472,7 @@
             hoy en día tiene se lo ha conferido precisamente ese tiempo que nos
             separa de él.
           </p>
-          <div class="image-container portrait float left zoom">
+          <picture class="image-container portrait float left zoom">
             <img
               class="image"
               src="./images/blog/Mozart.jpg"
@@ -482,7 +482,7 @@
               Wolfgang Amadeus Mozart con 13 años de edad como referente del
               arte "clásico".
             </p>
-          </div>
+          </picture>
           <p>
             Supongo que a estas alturas cierta parte de los lectores querrá
             echarse las manos a la cabeza pensando “Nos quiere comparar a
@@ -510,7 +510,7 @@
             probablemente, todos ellos serán recordados dentro de doscientos
             años y con reverencia.
           </p>
-          <div class="image-container portrait float right zoom">
+          <picture class="image-container portrait float right zoom">
             <img
               class="image"
               src="./images/blog/John-Williams.jpg"
@@ -519,7 +519,7 @@
             <p class="hidden-caption">
               John Williams, uno de los padres del arte del cine.
             </p>
-          </div>
+          </picture>
           <p>
             No nos engañemos ninguno. El <em>cine</em> y más los
             <em>videojuegos</em> son <em>artes jóvenes</em>. Hoy en día han
@@ -548,7 +548,7 @@
             comunidad de artistas que hacen grupos, que hacen obras conjuntas y
             que dejan un legado cultural que difícilmente pueda ser olvidado.
           </p>
-          <div class="image-container portrait float left zoom">
+          <picture class="image-container portrait float left zoom">
             <img
               class="image"
               src="./images/blog/Shigeru Miyamoto.jpg"
@@ -557,7 +557,7 @@
             <p class="hidden-caption">
               Shigeru Miyamoto, un padre del joven arte de los videojuegos.
             </p>
-          </div>
+          </picture>
           <p>
             Analizando todo esto en detalle, no me resulta tan difícil pensar en
             un futuro (suponiendo que no lo destrocemos) en el que hablemos de
