--- a/aboutme.html
+++ b/aboutme.html
@@ -137,7 +137,7 @@
             </p>
             <p>Ciudad de residencia actual: <strong>Málaga</strong>.</p>
           </div>
-          <h3>Foramción reglada:</h3>
+          <h3>Formación reglada:</h3>
           <ul>
             <li>
               <p>
